--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,19 +1,11 @@
 # src/Dockerfile
-# Usa una imagen base oficial de Python
-FROM python:3.9-slim-buster
+FROM python:3.10-slim
 
-# Establece el directorio de trabajo dentro del contenedor
 WORKDIR /app
 
-# Copia los archivos de requisitos y la aplicación al contenedor
 COPY requirements.txt .
-COPY app.py .
-
-# Instala las dependencias de Python
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Expone el puerto 5000 para que la aplicación sea accesible
-EXPOSE 5000
+COPY . .
 
-# Comando para ejecutar la aplicación cuando el contenedor se inicie
 CMD ["python", "app.py"]
